force-app-modified/main/default/objects/courses__c/courses__c.object-meta.xml
<CustomObject>
    <label>קורס</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>מספר קורס</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>קורסים</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>