force-app-modified/main/default/objects/courses__c/fields/Charter_company__c.field-meta.xml
<CustomField>
    <fullName>Charter_company__c</fullName>
    <label>חברת השכרה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AF</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>Athenian</fullName>
            </value>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>Dream</fullName>
            </value>
            <value>
                <fullName>Exadas</fullName>
            </value>
            <value>
                <fullName>Fyly</fullName>
            </value>
            <value>
                <fullName>Golden caompass</fullName>
            </value>
            <value>
                <fullName>Gr sailing</fullName>
            </value>
            <value>
                <fullName>Ionian by patras</fullName>
            </value>
            <value>
                <fullName>Ionian charter</fullName>
            </value>
            <value>
                <fullName>Istion</fullName>
            </value>
            <value>
                <fullName>JF</fullName>
            </value>
            <value>
                <fullName>Kavas</fullName>
            </value>
            <value>
                <fullName>Kekeris</fullName>
            </value>
            <value>
                <fullName>Kiriacoulis</fullName>
            </value>
            <value>
                <fullName>LAGOON NEPA</fullName>
            </value>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>Minas</fullName>
            </value>
            <value>
                <fullName>Moorings</fullName>
            </value>
            <value>
                <fullName>Nautica charter</fullName>
            </value>
            <value>
                <fullName>Navigar</fullName>
            </value>
            <value>
                <fullName>Nomicos</fullName>
            </value>
            <value>
                <fullName>North sailing</fullName>
            </value>
            <value>
                <fullName>Octupos</fullName>
            </value>
            <value>
                <fullName>Paralos</fullName>
            </value>
            <value>
                <fullName>pelagos</fullName>
            </value>
            <value>
                <fullName>Sail agean</fullName>
            </value>
            <value>
                <fullName>Sea Novels</fullName>
            </value>
            <value>
                <fullName>Sea star</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>