force-app-modified/main/default/objects/courses__c/fields/charternumber__c.field-meta.xml
<CustomField>
    <fullName>charternumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>צ&apos;רטר</label>
    <referenceTo>charters__c</referenceTo>
    <relationshipLabel>קורסים</relationshipLabel>
    <relationshipName>charternumber</relationshipName>
    <type>Lookup</type>
</CustomField>