force-app-modified/main/default/objects/courses__c/fields/date__c.field-meta.xml
<CustomField>
    <fullName>date__c</fullName>
    <label>תאריך</label>
    <type>Date</type>
</CustomField>