force-app-modified/main/default/objects/courses__c/fields/GreeceCourseDate1__c.field-meta.xml
<CustomField>
    <fullName>GreeceCourseDate1__c</fullName>
    <label>תאריך קורס ביוון</label>
    <type>Date</type>
</CustomField>