force-app-modified/main/default/objects/courses__c/fields/instructor_flight__c.field-meta.xml
<CustomField>
    <fullName>instructor_flight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>טיסה למדריך</label>
    <type>Checkbox</type>
</CustomField>