force-app-modified/main/default/objects/courses__c/fields/learning_method1__c.field-meta.xml
<CustomField>
    <fullName>learning_method1__c</fullName>
    <label>דרך לימוד</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>כיתה</fullName>
            </value>
            <value>
                <fullName>לימוד עצמי</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>