force-app-modified/main/default/objects/courses__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>דגם</label>
    <length>50</length>
    <type>Text</type>
</CustomField>