force-app-modified/main/default/objects/courses__c/fields/test_date__c.field-meta.xml
<CustomField>
    <fullName>test_date__c</fullName>
    <label>תאריך טסט</label>
    <type>Date</type>
</CustomField>