force-app-modified/main/default/objects/courses__c/fields/test_date_GMDSS__c.field-meta.xml
<CustomField>
    <fullName>test_date_GMDSS__c</fullName>
    <label>תאריך בחינה GMDSS</label>
    <type>Date</type>
</CustomField>