force-app-modified/main/default/objects/courses__c/recordTypes/basic_course.recordType-meta.xml
<RecordType>
    <fullName>basic_course</fullName>
    <active>true</active>
    <label>קורס בסיסי</label>
</RecordType>