force-app-modified/main/default/objects/courses__c/recordTypes/Course_in_Greece.recordType-meta.xml
<RecordType>
    <fullName>Course_in_Greece</fullName>
    <active>true</active>
    <label>קורס ביוון</label>
</RecordType>