force-app-modified/main/default/objects/courses__c/recordTypes/international_license_in_israel.recordType-meta.xml
<RecordType>
    <fullName>international_license_in_israel</fullName>
    <active>true</active>
    <label>קורס  רישיון בינ&quot;ל בארץ</label>
</RecordType>