force-app-modified/main/default/objects/courses__c/recordTypes/meshit_30_practical.recordType-meta.xml
<RecordType>
    <fullName>meshit_30_practical</fullName>
    <active>true</active>
    <label>משיט 30 מעשי</label>
</RecordType>