force-app-modified/main/default/objects/courses__c/recordTypes/meshit_30_theory.recordType-meta.xml
<RecordType>
    <fullName>meshit_30_theory</fullName>
    <active>true</active>
    <label>משיט 30 עיוני</label>
</RecordType>