force-app-modified/main/default/objects/courses__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>instructor__c</columns>
    <columns>yacht_type__c</columns>
    <columns>number_of_places__c</columns>
    <columns>date__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>courses__c.Course_in_Greece</value>
    </filters>
    <label>All</label>
</ListView>