force-app-modified/main/default/objects/courses__c/listViews/Basic_courses.listView-meta.xml
<ListView>
    <fullName>Basic_courses</fullName>
    <columns>NAME</columns>
    <columns>date__c</columns>
    <columns>weekday__c</columns>
    <columns>Partecipants_number__c</columns>
    <columns>available_spots__c</columns>
    <columns>general_information__c</columns>
    <columns>SMS_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>courses__c.basic_course</value>
    </filters>
    <label>קורסים 7 מטר</label>
</ListView>