force-app-modified/main/default/objects/courses__c/listViews/GMDSSCcourse.listView-meta.xml
<ListView>
    <fullName>GMDSSCcourse</fullName>
    <columns>NAME</columns>
    <columns>GMDSS_test_date__c</columns>
    <columns>general_information__c</columns>
    <columns>Partecipants_number__c</columns>
    <columns>available_spots__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>courses__c.GMDSS_Self_Learning,courses__c.GMDSS_CLASS</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>8/1/2025 12:00 AM</value>
    </filters>
    <label>קורס GMDSS</label>
</ListView>