force-app-modified/main/default/objects/courses__c/listViews/greece_courses.listView-meta.xml
<ListView>
    <fullName>greece_courses</fullName>
    <columns>NAME</columns>
    <columns>charternumber__c</columns>
    <columns>general_information__c</columns>
    <columns>GreeceCourseDate1__c</columns>
    <columns>yacht_type__c</columns>
    <columns>instructor__c</columns>
    <columns>Partecipants_number__c</columns>
    <columns>available_spots__c</columns>
    <columns>meeting_date__c</columns>
    <columns>instructor_flight__c</columns>
    <columns>instructor_insurance__c</columns>
    <columns>InsyructorExpenses__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>courses__c.Course_in_Greece</value>
    </filters>
    <filters>
        <field>GreeceCourseDate1__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2026</value>
    </filters>
    <label>קורסים ביוון</label>
</ListView>